--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px;
-  background: url(http://i.imgur.com/b9r5sEL.jpg) bottom center;
+  background: url(http://www.photos-public-domain.com/wp-content/uploads/2012/06/dark-purple-speckled-paper-texture-600x400.jpg) bottom center;
   background-size: cover;
 }
 body,html {
